Note App Project Edit title

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <!-- INPUT -->
     <section id="home">
       <div class="container">
-        <div class="header upper">SabzLearn Note App</div>
+        <div class="header lead text-capitalize">
+          note app project
+        </div>
 
         <br><br>
         <div class="flex row-gt-sm">
